Css/index.css
*{
    margin: 0;
    padding: 0;
}
a{
    text-decoration: none;
}
li{
    list-style-type: none;
}
a:active{
    color: whitesmoke;
}
a:any-link{
    color: whitesmoke;
}
span{
    display: block;
}
@media only screen and (max-width : 420px){

.home{
    height: 100vh;
    width: 100%;
    background: #FFFFFF;
    position: relative;
}

.home::after{
    position: absolute;
    height: 100vh;
    width: 100%;
    content: "";
    top: 0;
    left: 0;
    background-color: rgba(0,0,0,0.6);
    background-image: url(../Assets/images/image.png);
    background-position: bottom;
    background-repeat: no-repeat;
    /* background-size: contain; */
}
.home::before{
    content: "";
    position: absolute;
    inset: 0;
    background-image: url(../Assets/images/cow-farm-background.avif);
    background-position: left;
    background-repeat: no-repeat;
    background-size: cover;
    filter: blur(8px);
}

.home .navbar{
    position: fixed;
    top: 20px;
    right: 20px;
    height: 15vh;
    width: 90%;
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: whitesmoke;
    border-radius: 10px;
    overflow: hidden;
}

.home .navbar{
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 2fr 1fr ;
    grid-template-areas: "logo CTA-btn-one"
                        "nav nav";
}
.home .navbar .logo{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.home .navbar .nav .navlist{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-size: 24px;
    color: #0066FF;
    text-shadow: 2px 2px 2px #359435;
    transition: transform 0.5s ease;
    overflow: hidden;
}
/* .home .navbar .nav .navlist li{
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
} */
.home .navbar .nav .navlist li.active{
    font-weight: bold;
}
.home .navbar .CTA-btn-one{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.home .navbar .CTA-btn-one button{
    height: 40px;
    width: 80px;
    border-radius: 8px;
    border: none;
    box-shadow: 4px 4px 2px #0066FF;
    background-color: #359435;
    color: whitesmoke;
    font-size: 18px;
    font-weight: bolder;
    cursor: pointer;
}
.home .home_nav{
    height: 35vh;
    width: 100%;
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 10;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.home .home_nav .nav-items{
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(5 ,1fr);
    grid-template-areas: " heading-1 heading-1"
                            "heading-2 heading-2"
                            "heading-3 heading-3"
                            "button-1 button-1" 
                            "button-2 button-2";
place-items: center;
}

.home .home_nav .nav-items .heading-1{
    text-align: center;
    font-size: 24px;
    width: 70%;
}

.home .home_nav .nav-items .heading-2{
    text-align: center;
    font-size: 20px;
}

.home .home_nav .nav-items .heading-3{
    text-align: center;
    font-size: 18px;
}

.home .home_nav .nav-items .button-1{
    font-size: 18px;
    height: 35px;
    width: 140px;
    border: none;
    border-radius: 10px;
    background: linear-gradient(to bottom,#299329, #359435, #299329);
    color: whitesmoke;
    font-weight: bold;
    text-transform: capitalize;
    cursor: pointer;
}

.home .home_nav .nav-items .button-2{
    font-size: 18px;
    height: 35px;
    width: 140px;
    border: none;
    border-radius: 10px;
    background: linear-gradient(to bottom,#3385FF, #0066FF, #3385FF);
    color: whitesmoke;
    font-weight: bold;
    text-transform: capitalize;
    cursor: pointer;
}

.CTA-btn-two{
    z-index: 10;
    position: fixed;
    bottom: 10%;
    left: 80%;
    height: 60px;
    width: 60px;
    border-radius: 50%;
    background-color:#0066FF;
    display: flex;
    justify-content: center;
    align-items: center;
    color: whitesmoke;
    font-size: 22px;
}
.CTA-btn-two a{
    color: whitesmoke;
}

.Products{
    height: 70vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 20px;
}
.Products .heading-2{
    text-transform: capitalize;
    width: 100%;
    text-align: center;
    color: #299329;
}
.Products .product-container{
    height: 400px;
    width: 230px;
    background-color: whitesmoke;
    border-radius: 10px;
    box-shadow: 4px 4px 5px #299329;
    display: flex;
    align-items: center;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    gap: 30px;
}
.Products .product-container::-webkit-scrollbar{
    display: none;
}
.Products .product-container > div{
    height: 300px;
    min-width: 100%;
    scroll-snap-align: center;
    flex-shrink: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 10px;
}

.about-us{
    min-height: 100vh;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
}
.about-us .heading-2{
    color: #0066FF;
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}
.about-us .about-container{
    min-height: 50vh;
    max-height: auto;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
}
.about-us .about-container .about-wrapper{
    flex: 1 0 0;
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: center;
    align-items: center;
}
.about-us .about-container .about-wrapper img{
    margin: 10px 0px ;
}
.about-us .about-container .about-wrapper p{
    font-size: 18px;
    font-weight: 700;
    color: #299329;
}
.about-us ul{
    height: 20vh;
    width: 100%;
    display: grid;
    place-content: center;
    gap: 10px;
}
.about-us ul li .fa-check{
    color: #299329;
    margin-right: 10px;
}

.contact-us{
    height: 58vh;
    width: 100%;
    background-color: #0066FF;
}
.contact-us .contact .heading-two{
    width: 100%;
    color: #FFFFFF;
    font-weight: bolder;
    text-transform: uppercase;
    height: 30px;
    text-align: center;
    padding: 10px;
}
.contact-us .contact .contact-list{
    width: 100%;
    margin-left: 20px;
    line-height: 25px;
    font-size: 18px;
}
.contact-us .contact .doclist{
    width: 100%;
    margin-left: 20px;
    line-height: 25px;
    font-size: 18px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.contact-us .contact .doclist li{
    width: 100%;
    display: flex;
    gap: 30px;
}
.contact-us .contact footer{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 18px;
}
.contact-us .contact footer p{
    font-size: 18px;
    text-align: center;
}
.contact-us .doclist .material-symbols-outlined{
    border-radius: 50%;
    height: 40px;
    width: 40px;
    background-color: whitesmoke;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

}

